@@ -17,6 +17,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+common/anim.c:  animation_object() - return if object does not have a valid
+animation after logging error.  Before, we logged the error and would
+promptly crash.  MSW 6/13/2000
+
 server/apply.c: apply_treasure():  Bugfix: Set FLAG_NO_APPLY before
 moving object to the top.  - Jan Echternach 6/13/2000
 
